--- a/backend/src/main/webapp/app/scripts/directives/header/thairegion/template.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/thairegion/template.html
@@ -1,13 +1,20 @@
-<img src="/backend/app/images/thailand-2.png">
+
+<button class="button button-3d button-box button-action"><img src="/backend/app/images/thailand-2.png"></button>
 <div id="thairegion-slideout_inner">
 
-		<div class="col-lg-12">
+		<!-- <div class="col-lg-12">
 		  	<div class="form-group">
 				<label class="control-label">จังหวัด</label>
 				<select name="actionCode" class="form-control" ng-model="askModalObj.trace.actionCode" ng-options="option.id as option.actMeaning + ' [' + option.actCode + ']' for option in askModalObj.init.actionCodes">
 					<option value="">--เลือก Action Code--</option>
 		  		</select>
 			</div>
+		</div> -->
+
+	<div class="col-lg-12">
+		<div mass-autocomplete>
+			<input ng-model="dirty.value" mass-autocomplete-item="autocomplete_options">
 		</div>
-		
+	</div>
+
 </div>
