--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="lib/css/datepicker.css" type="text/css">
     <link rel="stylesheet" href="lib/css/unicorn-buttons.css" type="text/css">
     <link rel="stylesheet" href="lib/css/slideMenu.css" type="text/css">
+    <link rel="stylesheet" href="lib/css/selectize.default.css" type="text/css">
     <!-- endbuild -->
     
     <!-- build:js(.) scripts/vendor.js -->
@@ -62,6 +63,8 @@
     <script src="lib/angular-base64-upload.min.js"></script>
     <script src="lib/angular-dateparser.min.js"></script>
     <script src="lib/angular-timepicker.min.js"></script>
+    <script src="lib/selectize.min.js"></script>
+    <script src="lib/angular-selectize.js"></script>
     
     <script src="lib/bootstrap-datepicker.js"></script>
     <script src="lib/bootstrap-datepicker-thai.js"></script>
