--- a/backend/src/main/webapp/app/scripts/directives/header/thairegion/template.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/thairegion/template.html
@@ -12,7 +12,9 @@
 		</div> -->
 
 	
-	
+	<selectize config='provinceConfig' options='provinceOptions' ng-model="provinceId"></selectize>
+	<selectize config='amphureConfig' options='amphureOptions' ng-model="amphureId"></selectize>
+	<selectize config='districtConfig' options='districtOptions' ng-model="districtId"></selectize>
 	
 
 </div>
