--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -41,7 +41,7 @@
 	
 	<!-- --- : Slide menu : ---- -->	
 	<div id="thairegion-slideout">	
-		<button class="button button-3d button-box button-primary"><img src="/backend/app/images/thailand-2.png"></button>
+		<button class="button button-3d button-box"><img src="/backend/app/images/thailand-2.png"></button>
 		<div id="thairegion-slideout_inner">	
 			<selectize config='provinceConfig' options='provinceOptions' ng-model="provinceId"></selectize>
 			<selectize config='amphureConfig' options='amphureOptions' ng-model="amphureId"></selectize>
