--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -27,6 +27,8 @@
 			  </ul>
 			</div>
 			
+			<div class="clock" style="position: absolute; top: -1px;"></div>
+			
     </div>
     
     <header-notification></header-notification>
