--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -27,8 +27,11 @@
 			  </ul>
 			</div>
 			
-			<div class="clock" style="position: absolute; top: -1px;"></div>
 			
+    </div>
+    
+    <div class="navbar-header">
+		<div class="clock" style="position: absolute; top: -1px;"></div>     
     </div>
     
     <header-notification></header-notification>
