--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -274,7 +274,7 @@
         </a>
         <ul class="dropdown-menu dropdown-user">
         	<li ng-show="group2">
-        		<a ui-sref="dashboard.assigntask" style="color: #337AB7;"><i class="fa fa-pencil-square-o fa-fw"></i> จัดการข้อมูลงาน</a>
+        		<a ui-sref="dashboard.assigntask" style="color: #337AB7;"><i class="fa fa-pencil-square-o fa-fw"></i> จัดการงาน</a>
             </li>
             <li class="divider" ng-show="group2"></li>
         	<li ng-show="group3 || group5">
@@ -282,7 +282,7 @@
             </li>
             <li class="divider" ng-show="group3"></li>
         	<li ng-show="group3">
-        		<a ui-sref="dashboard.working.search" style="color: #337AB7;"><i class="fa fa-gavel fa-fw"></i> {{ group4 ? 'งานของฉัน' : 'ข้อมูลงาน' }}</a>
+        		<a ui-sref="dashboard.working.search" style="color: #337AB7;"><i class="fa fa-gavel fa-fw"></i> {{ group4 ? 'งานของฉัน' : 'แก้ใขข้อมูลงาน' }}</a>
             </li>
         </ul>
     </li>
