--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0; box-shadow: 0px 1px #D7DBDD;">
     <div class="navbar-header">
 
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -36,8 +36,8 @@
     
     <header-notification></header-notification>
     
-    <div style="position: absolute; right: 35px; top: 50px;" ng-show="photoSource && !(state.current.name == 'dashboard.home')">
-	    <img id="photo" class="img-thumbnail" ng-src="{{ photoSource }}" style="height: 90px;">
+    <div style="position: absolute; right: 35px; top: 54px;" ng-show="photoSource && !(state.current.name == 'dashboard.home')">
+	    <img id="photo" class="img-thumbnail" ng-src="{{ photoSource }}" style="height: 84px;">
     </div>
 
 
