--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" style="color: #337AB7;">Debt Management System</a>
+        <a class="navbar-brand comm-txt-3d" style="color: #337AB7;">Debt Management System</a>
     </div>
     <!-- /.navbar-header -->
     
