--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -1,13 +1,9 @@
 <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0; box-shadow: 0px 1px #D7DBDD;">
     <div class="navbar-header">
-
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand comm-txt-3d" style="color: #337AB7;">Debt Management System</a>
+        <div class="comm-txt-3d" style="color: #337AB7; text-align: center; line-height: 90%; margin-left: 20px; margin-top: 10px;">
+	        <label>Debt Management System</label><br/>
+	        <small>Version {{ backendVersion }}</small>
+        </div>
     </div>
     <!-- /.navbar-header -->
     
