--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -1,9 +1,11 @@
-<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0; box-shadow: 0px 1px #D7DBDD;">
+<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0; 
+	box-shadow: 0px 0px 7px 1px rgba(0,0,0,0.75);">
+	
     <div class="navbar-header">
         <div class="comm-txt-3d" 
         	style="color: #337AB7; text-align: center; line-height: 90%; margin-left: 5px; margin-top: 3px; padding: 5px 10px 8px 10px;
         	border-radius: 15px 0px 15px 0px;
-        	box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);">
+        	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);">
         	
 	        <label>Debt Management System</label><br/>
 	        <small>Version {{ backendVersion }}</small>
