--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -1,5 +1,8 @@
 
-<ul class="nav navbar-top-links navbar-right">
+<ul class="nav navbar-top-links navbar-right" 
+	style="margin-top: 2px; margin-bottom: 2px; padding-left: 20px; position: relative; right: 5px;
+ 		   border-radius: 5px 5px 5px 5px; 
+		   box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);">
 
 	
 
