--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" href="lib/css/slideMenu.css" type="text/css">
     <link rel="stylesheet" href="lib/css/selectize.default.css" type="text/css">
     <link rel="stylesheet" href="lib/css/flipclock.css" type="text/css">
+    <link rel="stylesheet" href="lib/css/login.css" type="text/css">
     <!-- endbuild -->
     
     <!-- build:js(.) scripts/vendor.js -->
