--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -86,13 +86,17 @@
     <!-- <link href="styles/morrisjs/morris.css" rel="stylesheet"> -->
 
 <style type="text/css">
-	#loading-bar .bar {
-		top: 58px;
-		height: 3px;
-		background: #337ab7;
-		border-bottom-right-radius: 1px;
-		border-top-right-radius: 1px;
-	}
+#loading-bar .bar {
+	top: 58px;
+	height: 3px;
+	background: #337ab7;
+	border-bottom-right-radius: 1px;
+	border-top-right-radius: 1px;
+}
+
+#loading-bar-spinner {
+	top: 30px;
+}
 </style>
     </head>
    
