--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -83,7 +83,7 @@
         <script src="scripts/controllers/loginCtrl.js"></script>
         <script src="scripts/services/httpInterceptor.js"></script>
         <script src="js/sb-admin-2.js"></script>
-        <script src="js/config.js"></script>
+        <script src="js/ctxConfig.js"></script>
         <script src="js/ctxApp.js"></script>
     <!-- endbuild -->
 
