--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -46,7 +46,7 @@
 	
 	
 	<!-- --- : Slide menu : ---- -->	
-	<div id="phone-slideout">	
+	<div id="phone-slideout" ng-hide="isPhoneHide">	
 		<button class="button button-3d button-box"><i class="fa fa-phone fa-2x" style="padding: 5px;"></i></button>
 		<div id="phone-slideout_inner">	
 			<div id="sipClient" class="container-fluid" style="width: 322px; border-radius: 10px 10px 10px 10px;">
