--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -52,7 +52,8 @@
 			<div id="sipClient" class="container-fluid" style="width: 322px; border-radius: 10px 10px 10px 10px;">
 			    <div class="clearfix sipStatus" style="border-radius: 10px 10px 0 0;">
 			        <div id="txtCallStatus" class="pull-right">&nbsp;</div>
-			        <div id="txtRegStatus"></div>
+			        <div id="txtRegStatus" class="pull-left"></div>
+			        <div class="pull-left" style="color: white;">&nbsp;&nbsp;&nbsp;ext. {{ phoneExt }}</div>
 			    </div>
 			    <div class="form-group" id="phoneUI">
 			        <div class="input-group">
