--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -47,7 +47,7 @@
 	
 	<!-- --- : Slide menu : ---- -->	
 	<div id="phone-slideout" ng-hide="isPhoneHide">	
-		<button class="button button-3d button-box"><i class="fa fa-phone fa-2x" style="padding: 5px;"></i></button>
+		<button id="phone-slideout-btn" class="button button-3d button-box"><i id="phone-slideout-icon" class="fa fa-phone fa-2x" style="padding: 5px;"></i></button>
 		<div id="phone-slideout_inner">	
 			<div id="sipClient" class="container-fluid" style="width: 322px; border-radius: 10px 10px 10px 10px;">
 			    <div class="clearfix sipStatus" style="border-radius: 10px 10px 0 0;">
