--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -49,15 +49,15 @@
 	<div id="phone-slideout" ng-hide="isPhoneHide">	
 		<button id="phone-slideout-btn" class="button button-3d button-box"><i id="phone-slideout-icon" class="fa fa-phone fa-2x" style="padding: 5px;"></i></button>
 		<div id="phone-slideout_inner">	
-			<div id="sipClient" class="container-fluid" style="width: 322px; border-radius: 10px 10px 10px 10px;">
+			<div id="sipClient" class="container-fluid" style="width: 329px; border-radius: 10px 10px 10px 10px; margin:-5px -1px -5px -1px;">
 			    <div class="clearfix sipStatus" style="border-radius: 10px 10px 0 0;">
 			        <div id="txtCallStatus" class="pull-right">&nbsp;</div>
 			        <div id="txtRegStatus" class="pull-left"></div>
-			        <div class="pull-left" style="color: white;">&nbsp;&nbsp;&nbsp;ext. {{ phoneExt }}</div>
+			        <div class="pull-left">&nbsp;&nbsp;&nbsp;ext. {{ phoneExt }}</div>
 			    </div>
 			    <div class="form-group" id="phoneUI">
 			        <div class="input-group">
-			            <div class="input-group-btn">
+			            <div id="btnPanel" class="input-group-btn">
 			                <button class="btn btn-sm btn-primary dropdown-toggle" data-toggle="dropdown" title="Show Keypad">
 			                    <i class="fa fa-th"></i>
 			                </button>
@@ -116,7 +116,7 @@
 			        </div>
 			    </div>
 			
-			    <div class="modal fade" id="mdlError" tabindex="-1" role="dialog" aria-hidden="true" data-backdrop="static" data-keyboard="false">
+			    <!-- <div class="modal fade" id="mdlError" tabindex="-1" role="dialog" aria-hidden="true" data-backdrop="static" data-keyboard="false">
 			        <div class="modal-dialog modal-sm">
 			            <div class="modal-content">
 			                <div class="modal-header">
@@ -128,7 +128,8 @@
 			                </div>
 			            </div>
 			        </div>
-			    </div>
+			    </div> -->
+			    
 			</div>
 			
 			<audio id="ringtone" src="sounds/incoming.mp3" loop></audio>
