--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -49,7 +49,7 @@
 	<div id="phone-slideout" ng-hide="isPhoneHide">	
 		<button id="phone-slideout-btn" class="button button-3d button-box"><i id="phone-slideout-icon" class="fa fa-phone fa-2x" style="padding: 5px;"></i></button>
 		<div id="phone-slideout_inner">	
-			<div id="sipClient" class="container-fluid" style="width: 329px; border-radius: 10px 10px 10px 10px; margin:-5px -1px -5px -1px;">
+			<div id="sipClient" class="container-fluid" style="width: 329px; border-radius: 0 10px 10px 0; margin:-5px -1px -5px -1px;">
 			    <div class="clearfix sipStatus" style="border-radius: 10px 10px 0 0;">
 			        <div id="txtCallStatus" class="pull-right">&nbsp;</div>
 			        <div id="txtRegStatus" class="pull-left"></div>
