--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -57,33 +57,28 @@
 			    </div>
 			    <div class="form-group" id="phoneUI">
 			        <div class="input-group">
-			            <div class="input-group-btn">
-			            	<button class="btn btn-sm btn-danger dropdown-toggle" title="Reset" ng-click="resetPhone()">
-			                    <i class="fa fa-undo"></i>
+			            <div id="btnPanel" class="input-group-btn">
+			                <button class="btn btn-sm btn-primary dropdown-toggle" data-toggle="dropdown" title="Show Keypad">
+			                    <i class="fa fa-th"></i>
 			                </button>
-			                <span id="btnPanel">
-				                <button class="btn btn-sm btn-primary dropdown-toggle" data-toggle="dropdown" title="Show Keypad">
-				                    <i class="fa fa-th"></i>
-				                </button>
-				                <div id="sip-dialpad" class="dropdown-menu">
-				                    <button type="button" class="btn btn-default digit" data-digit="1">1<span>&nbsp;</span></button>
-				                    <button type="button" class="btn btn-default digit" data-digit="2">2<span>ABC</span></button>
-				                    <button type="button" class="btn btn-default digit" data-digit="3">3<span>DEF</span></button>
-				                    <button type="button" class="btn btn-default digit" data-digit="4">4<span>GHI</span></button>
-				                    <button type="button" class="btn btn-default digit" data-digit="5">5<span>JKL</span></button>
-				                    <button type="button" class="btn btn-default digit" data-digit="6">6<span>MNO</span></button>
-				                    <button type="button" class="btn btn-default digit" data-digit="7">7<span>PQRS</span></button>
-				                    <button type="button" class="btn btn-default digit" data-digit="8">8<span>TUV</span></button>
-				                    <button type="button" class="btn btn-default digit" data-digit="9">9<span>WXYZ</span></button>
-				                    <button type="button" class="btn btn-default digit" data-digit="*">*<span>&nbsp;</span></button>
-				                    <button type="button" class="btn btn-default digit" data-digit="0">0<span>+</span></button>
-				                    <button type="button" class="btn btn-default digit" data-digit="#">#<span>&nbsp;</span></button>
-				                    <div class="clearfix">&nbsp;</div>
-				                    <button class="btn btn-success btn-block btnCall" title="Send">
-				                        <i class="fa fa-play"></i> Send
-				                    </button>
-				                </div>
-			                </span>
+			                <div id="sip-dialpad" class="dropdown-menu">
+			                    <button type="button" class="btn btn-default digit" data-digit="1">1<span>&nbsp;</span></button>
+			                    <button type="button" class="btn btn-default digit" data-digit="2">2<span>ABC</span></button>
+			                    <button type="button" class="btn btn-default digit" data-digit="3">3<span>DEF</span></button>
+			                    <button type="button" class="btn btn-default digit" data-digit="4">4<span>GHI</span></button>
+			                    <button type="button" class="btn btn-default digit" data-digit="5">5<span>JKL</span></button>
+			                    <button type="button" class="btn btn-default digit" data-digit="6">6<span>MNO</span></button>
+			                    <button type="button" class="btn btn-default digit" data-digit="7">7<span>PQRS</span></button>
+			                    <button type="button" class="btn btn-default digit" data-digit="8">8<span>TUV</span></button>
+			                    <button type="button" class="btn btn-default digit" data-digit="9">9<span>WXYZ</span></button>
+			                    <button type="button" class="btn btn-default digit" data-digit="*">*<span>&nbsp;</span></button>
+			                    <button type="button" class="btn btn-default digit" data-digit="0">0<span>+</span></button>
+			                    <button type="button" class="btn btn-default digit" data-digit="#">#<span>&nbsp;</span></button>
+			                    <div class="clearfix">&nbsp;</div>
+			                    <button class="btn btn-success btn-block btnCall" title="Send">
+			                        <i class="fa fa-play"></i> Send
+			                    </button>
+			                </div>
 			            </div>
 			            <input type="text" name="number" id="numDisplay" class="form-control text-center input-sm" value="" placeholder="Enter number..." autocomplete="off" />
 			            <div class="input-group-btn input-group-btn-sm">
@@ -98,7 +93,7 @@
 			    </div>
 			
 			    <div class="well-sip">
-			        <div id="sip-splash" class="text-muted text-center panel panel-default">
+			        <div id="sip-splash" class="text-muted text-center panel panel-default" style="margin-bottom: 8px;">
 			            <div class="panel-body">
 			                <h3 class="page-header">
 			                <span class="fa-stack fa-2x">
@@ -111,7 +106,7 @@
 			            </div>
 			        </div>
 			
-			        <div id="sip-log" class="panel panel-default hide">
+			        <div id="sip-log" class="panel panel-default hide" style="margin-bottom: 8px;">
 			            <div class="panel-heading">
 			                <h4 class="text-muted panel-title">Recent Calls <span class="pull-right"><i class="fa fa-trash text-muted sipLogClear" title="Clear Log"></i></span></h4>
 			            </div>
@@ -120,6 +115,11 @@
 			            </div>
 			        </div>
 			    </div>
+			    
+            	<button class="btn btn-sm btn-danger btn-circle" style="margin-bottom: 10px;" title="Reset" ng-click="resetPhone()">
+                    <i class="fa fa-undo"></i>
+                </button>
+				
 			</div>
 			
 			<audio id="ringtone" src="sounds/incoming.mp3" loop></audio>
