--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -145,8 +145,11 @@
 	
 	
 	
-	
-	
+	<!-- --- : Footer : ---- -->
+	<div class="container-footer-common">
+		Copyright © 2017 Mayfender Co., Ltd. All rights reserved.
+	</div>
+	<!-- --- : Footer : ---- -->
     
 
     <!-- <sidebar></sidebar> -->
