--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -285,7 +285,7 @@
             </li>
             <li class="divider" ng-show="group3"></li>
         	<li ng-show="group3">
-        		<a ui-sref="dashboard.working.search" style="color: #337AB7;"><i class="fa fa-gavel fa-fw"></i> {{ group4 ? 'งานของฉัน' : 'แก้ใขข้อมูลงาน' }}</a>
+        		<a ui-sref="dashboard.working.search" style="color: #337AB7;"><i class="fa fa-gavel fa-fw"></i> {{ group4 ? 'ข้อมูลงาน' : 'แก้ใขข้อมูลงาน' }}</a>
             </li>
         </ul>
     </li>
