--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -33,6 +33,8 @@
     <link rel="stylesheet" href="lib/css/flipclock.css" type="text/css">
     <link rel="stylesheet" href="lib/css/login.css" type="text/css">
     <link rel="stylesheet" href="lib/css/ctxSip.css" type="text/css">
+    <link rel="stylesheet" href="lib/css/ng-tags-input.min.css" type="text/css">
+    <link rel="stylesheet" href="lib/css/ng-tags-input.bootstrap.min.css" type="text/css">
     <!-- endbuild -->
     
     <!-- build:js(.) scripts/vendor.js -->
@@ -73,6 +75,7 @@
     <script src="lib/bootstrap-datepicker-thai.js"></script>
     <script src="lib/moment.min.js"></script>
     <script src="lib/sip.min.js"></script>
+    <script src="lib/ng-tags-input.min.js"></script>
     
     <script src="i18n/bootstrap-datepicker.th.js"></script>
     <!-- endbower -->
