--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="lib/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/toaster.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/dnd_advanced.css" type="text/css">
-    <link rel="stylesheet" href="lib/css/xeditable.css" type="text/css">
+    <link rel="stylesheet" href="lib/css/xeditable.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/animate.css" type="text/css">
     <link rel="stylesheet" href="lib/css/datepicker.css" type="text/css">
     <link rel="stylesheet" href="lib/css/unicorn-buttons.css" type="text/css">
