--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="lib/css/ctxSip.css" type="text/css">
     <link rel="stylesheet" href="lib/css/ng-tags-input.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/ng-tags-input.bootstrap.min.css" type="text/css">
+    <!-- <link rel="stylesheet" href="lib/css/bulma.css" type="text/css"> -->
     <!-- endbuild -->
     
     <!-- build:js(.) scripts/vendor.js -->
