--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="lib/css/ctxSip.css" type="text/css">
     <link rel="stylesheet" href="lib/css/ng-tags-input.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/ng-tags-input.bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="lib/css/bootstrap-submenu.min.css" type="text/css">
     <!-- <link rel="stylesheet" href="lib/css/bulma.css" type="text/css"> -->
     <!-- endbuild -->
     
@@ -77,6 +78,7 @@
     <script src="lib/moment.min.js"></script>
     <script src="lib/sip.min.js"></script>
     <script src="lib/ng-tags-input.min.js"></script>
+    <script src="lib/bootstrap-submenu.min.js"></script>
     
     <script src="i18n/bootstrap-datepicker.th.js"></script>
     <!-- endbower -->
