--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -335,6 +335,10 @@
         		<a ui-sref="dashboard.resultCodeConf" style="color: #337AB7;"><i class="fa fa-random fa-fw"></i> Result Code</a>
             </li>
             <li class="divider"></li>
+            <li>
+        		<a ui-sref="dashboard.dymList.list" style="color: #337AB7;"><i class="fa fa-random fa-fw"></i> Dynamic List</a>
+            </li>
+            <li class="divider"></li>
         	<li>
         		<a ui-sref="dashboard.product.search" style="color: #337AB7;"><i class="fa fa-bank fa-fw"></i> โปรดักส์</a>
             </li>
