--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -327,14 +327,14 @@
             <i class="fa fa-gear fa-fw"></i>  <i class="fa fa-caret-down"></i>
         </a>
         <ul class="dropdown-menu dropdown-user">        
-        	<li>
+        	<!-- <li>
         		<a ui-sref="dashboard.actionCodeConf" style="color: #337AB7;"><i class="fa fa-random fa-fw"></i> Action Code</a>
             </li>
             <li class="divider"></li>
             <li>
         		<a ui-sref="dashboard.resultCodeConf" style="color: #337AB7;"><i class="fa fa-random fa-fw"></i> Result Code</a>
             </li>
-            <li class="divider"></li>
+            <li class="divider"></li> -->
             <li>
         		<a ui-sref="dashboard.dymList.list" style="color: #337AB7;"><i class="fa fa-random fa-fw"></i> Dynamic List</a>
             </li>
