--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -41,6 +41,7 @@
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="lib/jquery.min.js"></script>
+    <script src="lib/jquery-ui.min.js"></script>
     <script src="lib/angular.min.js"></script>
     <script src="i18n/angular-locale_th.js"></script>
     <script src="lib/bootstrap.min.js"></script>
