--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -290,6 +290,10 @@
             </li>
             <li class="divider" ng-show="group3"></li>
         	<li ng-show="group3">
+        		<a ui-sref="dashboard.tools" style="color: #337AB7;"><i class="fa fa-wrench fa-fw"></i> Tools</a>
+            </li>
+            <li class="divider" ng-show="group3"></li>
+        	<li ng-show="group3">
         		<a ui-sref="dashboard.working.search" style="color: #337AB7;"><i class="fa fa-gavel fa-fw"></i> {{ group4 ? 'ข้อมูลงาน' : 'แก้ใขข้อมูลงาน' }}</a>
             </li>
         </ul>
