--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -21,7 +21,7 @@
     	
 	    	<div class="btn-group" style="padding-top: 10px; position: absolute; left: 160px;" ng-hide="productsSelect == null">
 	    	  <label class="btn btn-primary" ng-if="productsSelect.length == 1" style="cursor: default;">
-	    	  	{{ productsSelect[0].productName }}
+	    	  	{{ workingOnProduct.productName }}
 	    	  </label>
 	    	
 			  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"
