--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -270,11 +270,11 @@
 			<i class="fa fa-home fa-lg"></i>
 		</a>
     </li>
-    <!-- <li class="dropdown">
+    <li class="dropdown">
 		<a class="dropdown-toggle" data-toggle="dropdown" style="cursor: pointer;" ui-sref="dashboard.summaryReport">
 			<i class="fa fa-tachometer fa-lg"></i>
 		</a>
-    </li> -->
+    </li>
     
     <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown">
