--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -147,7 +147,7 @@
 	
 	<!-- --- : Footer : ---- -->
 	<div class="container-footer-common">
-		Copyright © 2017 Mayfender Co., Ltd. All rights reserved.
+		Copyright © 2017 Mayfender Co., Ltd. All rights reserved.&nbsp;&nbsp;&nbsp;[{{ productKey }}]
 	</div>
 	<!-- --- : Footer : ---- -->
     
