--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -305,7 +305,7 @@
         </a>
         <ul class="dropdown-menu dropdown-user">
         	<li ng-show="group0">
-        		<a ui-sref="dashboard.warFile" style="color: #337AB7;"><i class="fa fa-plane fa-fw"></i> Upload WAR File</a>
+        		<a ui-sref="dashboard.warFile" style="color: #337AB7;"><i class="fa fa-file fa-fw"></i> Upload WAR File</a>
             </li>
         	<li class="divider" ng-show="group0"></li>
         	<li ng-show="group0">
