--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -276,7 +276,7 @@
 		</a>
     </li>
     
-    <li class="dropdown">
+    <li class="dropdown" ng-show="!group5">
         <a class="dropdown-toggle" data-toggle="dropdown">
             <i class="fa fa-tasks fa-fw"></i>  <i class="fa fa-caret-down"></i>
         </a>
@@ -289,7 +289,7 @@
         		<a ui-sref="dashboard.assigntask" style="color: #337AB7;"><i class="fa fa-pencil-square-o fa-fw"></i> จัดการข้อมูลงาน</a>
             </li>
             <li class="divider" ng-show="group2"></li>
-        	<li ng-show="group3 || group5">
+        	<li ng-show="group3">
         		<a ui-sref="dashboard.traceResult" style="color: #337AB7;"><i class="fa fa-desktop fa-fw"></i> ผลการติดตาม</a>
             </li>
             <li class="divider" ng-show="group3"></li>
@@ -368,10 +368,6 @@
         <ul class="dropdown-menu dropdown-user">
         	<li>
         		<a ui-sref="dashboard.product.search" style="color: #337AB7;"><i class="fa fa-bank fa-fw"></i> โปรดักส์</a>
-            </li>
-            <li class="divider"></li>
-        	<li>
-        		<a ui-sref="dashboard.user.search" style="color: #337AB7;"><i class="fa fa-users fa-fw"></i> {{'menu.user' | translate}}</a>
             </li>
             <li class="divider"></li>
         	<li>
