--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -130,7 +130,7 @@
 		</div>
 	</div>	
 	
-	<div id="thairegion-slideout">	
+	<!-- <div id="thairegion-slideout">	
 		<button class="button button-3d button-box"><img src="/backend/app/images/thailand-2.png"></button>
 		<div id="thairegion-slideout_inner">	
 			<selectize config='provinceConfig' options='provinceOptions' ng-model="provinceId"></selectize>
@@ -139,7 +139,7 @@
 			<br />
 			<span style="font-weight: 700;">รหัสไปรษณีย์</span>&nbsp;&nbsp;&nbsp;<span style="font-weight: 700; font-size: 24px;">{{ zipcode }}</span>
 		</div>
-	</div>	
+	</div>	 -->
 	<!-- --- : Slide menu : ---- -->
 	
 	
