--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -309,6 +309,10 @@
             </li>
         	<li class="divider" ng-show="group0"></li>
         	<li ng-show="group0">
+        		<a ui-sref="dashboard.deployerFile" style="color: #337AB7;"><i class="fa fa-file fa-fw"></i> Deployer File</a>
+            </li>
+        	<li class="divider" ng-show="group0"></li>
+        	<li ng-show="group0">
         		<a ui-sref="dashboard.traceResultResport" style="color: #337AB7;"><i class="fa fa-file-excel-o fa-fw"></i> นำเข้าแบบฟอร์มผลการติดตาม</a>
             </li>
         	<li class="divider" ng-show="group0"></li>
