--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -80,6 +80,7 @@
     <script src="lib/sip.min.js"></script>
     <script src="lib/ng-tags-input.min.js"></script>
     <script src="lib/bootstrap-colorpicker-module.min.js"></script>
+    <script src="lib/jquery.sticky-kit.min.js"></script>
     
     <script src="i18n/bootstrap-datepicker.th.js"></script>
     <!-- endbower -->
