--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -392,8 +392,8 @@
             <li><a ui-sref="dashboard.profile" style="color: #337AB7;"><i class="fa fa-user fa-fw"></i> {{'menu.profile' | translate}}</a>
             </li>
             <li class="divider"></li>
-            <li><a ui-sref="login({action: 'logout'})" style="color: #337AB7;"><i class="fa fa-sign-out fa-fw"></i> {{'menu.logout' | translate}}</a>
-            </li>
+            <li><a ui-sref="login({action: 'switch'})" style="color: #337AB7;"><i class="fa fa-exchange fa-fw"></i> Switch User</a></li>
+            <li><a ui-sref="login({action: 'logout'})" style="color: #337AB7;"><i class="fa fa-sign-out fa-fw"></i> {{'menu.logout' | translate}}</a></li>
         </ul>
     </li>
 </ul>
