--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -324,10 +324,10 @@
         		<a ui-sref="dashboard.noticeTemplate" style="color: #337AB7;"><i class="fa fa-file-excel-o fa-fw"></i> นำเข้าแบบฟอร์ม Notice</a>
             </li>
             <li class="divider" ng-show="group0"></li>
-        	<li ng-show="group0">
+        	<li>
         		<a ui-sref="dashboard.traceResultImport" style="color: #337AB7;"><i class="fa fa-file-excel-o fa-fw"></i> นำเข้าผลการติดตาม</a>
             </li>
-            <li class="divider" ng-show="group0"></li>
+            <li class="divider"></li>
         	<li>
         		<a ui-sref="dashboard.payment.search" style="color: #337AB7;"><i class="fa fa-file-excel-o fa-fw"></i> นำเข้า Payment</a>
             </li>
