--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -271,6 +271,11 @@
 		</a>
     </li>
     <li class="dropdown">
+		<a class="dropdown-toggle" data-toggle="dropdown" style="cursor: pointer;" ui-sref="dashboard.contactUs">
+			<i class="fa fa-comments fa-lg"></i>
+		</a>
+    </li>
+    <li class="dropdown">
 		<a class="dropdown-toggle" data-toggle="dropdown" style="cursor: pointer;" ui-sref="dashboard.summaryReport">
 			<i class="fa fa-tachometer fa-lg"></i>
 		</a>
