--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -393,6 +393,10 @@
         		<a ui-sref="dashboard.product.search" style="color: #337AB7;"><i class="fa fa-bank fa-fw"></i> โปรดักส์</a>
             </li>
             <li class="divider"></li>
+            <li>
+        		<a ui-sref="dashboard.user.search" style="color: #337AB7;"><i class="fa fa-users fa-fw"></i> {{'menu.user' | translate}}</a>
+            </li>
+            <li class="divider"></li>
         	<li>
         		<a ui-sref="dashboard.setting" style="color: #337AB7;"><i class="fa fa-users fa-sliders"></i> {{'menu.setting' | translate}}</a>
             </li>
