Blocking notice feature

--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -296,6 +296,11 @@
             </li>
             <li class="divider" ng-show="group2"></li>
             
+            <li ng-show="group3">
+        		<a ui-sref="dashboard.manageNotice" style="color: #337AB7;"><i class="fa fa-envelope-o fa-fw"></i> งานที่สั่งพิมพ์</a>
+            </li>
+            <li class="divider" ng-show="group3"></li>
+            
         	<li ng-show="group2">
         		<a ui-sref="dashboard.assigntask" style="color: #337AB7;"><i class="fa fa-pencil-square-o fa-fw"></i> จัดการข้อมูลงาน</a>
             </li>
