--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -371,6 +371,10 @@
         		<a ui-sref="dashboard.resultCodeConf" style="color: #337AB7;"><i class="fa fa-random fa-fw"></i> Result Code</a>
             </li>
             <li class="divider"></li> -->
+            <li ng-show="group0">
+        		<a ui-sref="dashboard.dymList.list" style="color: #337AB7;"><i class="fa fa-download fa-fw"></i> Download DB Backup</a>
+            </li>
+            <li class="divider" ng-show="group0"></li>
             <li>
         		<a ui-sref="dashboard.dymList.list" style="color: #337AB7;"><i class="fa fa-random fa-fw"></i> Dynamic List</a>
             </li>
