--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -372,7 +372,7 @@
             </li>
             <li class="divider"></li> -->
             <li ng-show="group0">
-        		<a ui-sref="dashboard.dymList.list" style="color: #337AB7;"><i class="fa fa-download fa-fw"></i> Download DB Backup</a>
+        		<a ui-sref="dashboard.dbBackupShow" style="color: #337AB7;"><i class="fa fa-download fa-fw"></i> Download DB Backup</a>
             </li>
             <li class="divider" ng-show="group0"></li>
             <li>
