--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -306,6 +306,10 @@
             </li>
             <li class="divider" ng-show="group2"></li>
         	<li ng-show="group3">
+        		<a ui-sref="dashboard.traceResult" style="color: #337AB7;"><i class="fa fa-shield fa-fw"></i> ผลประมาณการ</a>
+            </li>
+            <li class="divider" ng-show="group3"></li>
+        	<li ng-show="group3">
         		<a ui-sref="dashboard.traceResult" style="color: #337AB7;"><i class="fa fa-desktop fa-fw"></i> ผลการติดตาม</a>
             </li>
             <li class="divider" ng-show="group3"></li>
