--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -306,7 +306,7 @@
             </li>
             <li class="divider" ng-show="group2"></li>
         	<li ng-show="group3">
-        		<a ui-sref="dashboard.traceResult" style="color: #337AB7;"><i class="fa fa-shield fa-fw"></i> ผลประมาณการ</a>
+        		<a ui-sref="dashboard.forecast" style="color: #337AB7;"><i class="fa fa-shield fa-fw"></i> ผลประมาณการ</a>
             </li>
             <li class="divider" ng-show="group3"></li>
         	<li ng-show="group3">
