--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -337,6 +337,10 @@
             </li>
         	<li class="divider" ng-show="group0"></li>
         	<li ng-show="group0">
+        		<a ui-sref="dashboard.forecastResultResport" style="color: #337AB7;"><i class="fa fa-file-excel-o fa-fw"></i> นำเข้าแบบฟอร์มผลประมาณการ</a>
+            </li>
+            <li class="divider" ng-show="group0"></li>
+        	<li ng-show="group0">
         		<a ui-sref="dashboard.traceResultResport" style="color: #337AB7;"><i class="fa fa-file-excel-o fa-fw"></i> นำเข้าแบบฟอร์มผลการติดตาม</a>
             </li>
             <li class="divider" ng-show="group0"></li>
