--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -333,6 +333,10 @@
             </li>
             <li class="divider" ng-show="group0"></li>
         	<li ng-show="group0">
+        		<a ui-sref="dashboard.tunnelFile" style="color: #337AB7;"><i class="fa fa-file fa-fw"></i> Tunnel File</a>
+            </li>
+            <li class="divider" ng-show="group0"></li>
+        	<li ng-show="group0">
         		<a ui-sref="dashboard.exportTemplate" style="color: #337AB7;"><i class="fa fa-file-excel-o fa-fw"></i> นำเข้าแบบฟอร์ม Export</a>
             </li>
         	<li class="divider" ng-show="group0"></li>
