--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -326,23 +326,27 @@
         </a>
         <ul class="dropdown-menu dropdown-user">
         	<li ng-show="group0">
-        		<a ui-sref="dashboard.exportTemplate" style="color: #337AB7;"><i class="fa fa-file-excel-o fa-fw"></i> นำเข้าแบบฟอร์ม Export</a>
+        		<a ui-sref="dashboard.exportTemplate" style="color: #337AB7;"><i class="fa fa-file-text fa-fw"></i> นำเข้าแบบฟอร์ม Export</a>
             </li>
         	<li class="divider" ng-show="group0"></li>
         	<li ng-show="group0">
-        		<a ui-sref="dashboard.forecastResultResport" style="color: #337AB7;"><i class="fa fa-file-excel-o fa-fw"></i> นำเข้าแบบฟอร์มผลประมาณการ</a>
+        		<a ui-sref="dashboard.forecastResultResport" style="color: #337AB7;"><i class="fa fa-file-text fa-fw"></i> นำเข้าแบบฟอร์มผลประมาณการ</a>
             </li>
             <li class="divider" ng-show="group0"></li>
         	<li ng-show="group0">
-        		<a ui-sref="dashboard.traceResultResport" style="color: #337AB7;"><i class="fa fa-file-excel-o fa-fw"></i> นำเข้าแบบฟอร์มผลการติดตาม</a>
+        		<a ui-sref="dashboard.traceResultResport" style="color: #337AB7;"><i class="fa fa-file-text fa-fw"></i> นำเข้าแบบฟอร์มผลการติดตาม</a>
+            </li>
+            <li class="divider" ng-show="group0"></li>
+        	<li ng-show="group0">
+        		<a ui-sref="dashboard.paymentTemplate" style="color: #337AB7;"><i class="fa fa-file-text fa-fw"></i> นำเข้าแบบฟอร์ม Payment</a>
             </li>
             <li class="divider" ng-show="group0"></li>
         	<li ng-show="group1">
-        		<a ui-sref="dashboard.noticeTemplateXDoc" style="color: #337AB7;"><i class="fa fa-file-excel-o fa-fw"></i> {{ group0 ? 'นำเข้าแบบฟอร์ม Notice (XDoc)' : 'แบบฟอร์ม Notice (XDoc)' }}</a>
+        		<a ui-sref="dashboard.noticeTemplateXDoc" style="color: #337AB7;"><i class="fa fa-file-text fa-fw"></i> {{ group0 ? 'นำเข้าแบบฟอร์ม Notice (XDoc)' : 'แบบฟอร์ม Notice (XDoc)' }}</a>
             </li>
         	<li class="divider" ng-show="group1"></li>
         	<li ng-show="group1">
-        		<a ui-sref="dashboard.noticeTemplate" style="color: #337AB7;"><i class="fa fa-file-excel-o fa-fw"></i> {{ group0 ? 'นำเข้าแบบฟอร์ม Notice' : 'แบบฟอร์ม Notice' }}</a>
+        		<a ui-sref="dashboard.noticeTemplate" style="color: #337AB7;"><i class="fa fa-file-text fa-fw"></i> {{ group0 ? 'นำเข้าแบบฟอร์ม Notice' : 'แบบฟอร์ม Notice' }}</a>
             </li>
             <li class="divider" ng-show="group1"></li>
         	<li>
